luasrc/gaya/gaya.css
/* ... */
 .cbi-modal .cbi-section,
 .cbi-section .cbi-section {}

 .cbi-modal .cbi-tabmenu {
 	margin-left: 0;
 }

 .cbi-map-descr,
 .cbi-section-descr {
 	font-size: small;
 	text-align: center;
 	line-height: 1.42857143;
 	color: #999;
 	padding: 0.5rem;
 }

 .cbi-section>legend {
 	display: none !important;
 }

 fieldset>fieldset,
 .cbi-section>.cbi-section {
 	border: 0;
 	box-shadow: none;
 	margin: 0;
 	padding: 0;
 }

 .cbi-section>h3:first-child,
 .panel-title {
 	font-size: 1.4rem;
 	line-height: 1;
 	display: block;
 	width: 100%;
 	padding-bottom: 1rem;
 	color: #e4e4e4;
 	border-bottom: thin solid #eeeeee00;
 	margin: 0 0 0.5rem;
 }

 .cbi-section>h4:first-child,
 .cbi-section>p:first-child,
 [data-tab-title]>h3:first-child,
 [data-tab-title]>h4:first-child,
 [data-tab-title]>p:first-child {
 	padding-top: 1rem;
 }

 table {
 	border-spacing: 0;
 	border-collapse: collapse;
 }

 table,
 .table {
 	overflow-y: hidden;
 	width: 100%;
 	border-radius: 10px;
 }

 .container>.cbi-section:first-of-type>.table[width="100%"]>.tr>.td {
 	padding: 0.6rem;
 }

 .cbi-section-table-cell {
 	line-height: 1.1;
 	align-self: flex-end;
 	flex: 1 1 auto;
 }

 tr>td,
 tr>th,
 .tr>.td,
 .tr>.th,
 .cbi-section-table-row::before,
 #cbi-wireless>#wifi_assoclist_table>.tr:nth-child(2) {
 	color: #ffffff;
 	border-top: thin solid rgba(255, 255, 255, 0);
 }

 .table[width="100%"]>.tr:first-child>.td {
 	margin: auto 0;
 }

 .cbi-section-table-row {
 	margin-bottom: 1rem;
 	text-align: center !important;
 }

 .cbi-section-table-row:last-child {
 	margin-bottom: 0;
 }

 .cbi-section-table-row>.cbi-value-field [data-dynlist]>input,
 .cbi-section-table-row>.cbi-value-field input.cbi-input-password {
 	width: calc(100% - 1.5rem);
 }

 table table,
 .table .table,
 .cbi-value-field table,
 .cbi-value-field .table,
 td>table>tbody>tr>td,
 .td>.table>.tbody>.tr>.td,
 .cbi-value-field>table>tbody>tr>td,
 .cbi-value-field>.table>.tbody>.tr>.td {
 	border: 0;
 }

 .btn,
 .cbi-button,
 .item::after {
 	font-size: 0.8rem;
 	display: inline-block;
 	width: auto !important;
 	cursor: pointer;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
 	transition: all 0.2s ease-in-out;
 	text-align: center;
 	vertical-align: middle;
 	white-space: nowrap;
 	text-decoration: none;
 	text-transform: uppercase;
 	color: rgba(0, 0, 0, 0.87);
 	border: 0;
 	background-color: #f0f0f0;
 	background-image: none;
 	-webkit-appearance: none;
 	-ms-touch-action: manipulation;
 	touch-action: manipulation;
 	padding: 0 0.8rem;
 }

 .cbi-button-up {
 	transform: scaleY(-1);
 }

 .cbi-button:not(select) {
 	-webkit-appearance: none !important;
 }

 .cbi-button+.cbi-button {
 	margin-left: 0.6rem;
 }

 .btn:hover,
 .btn:focus,
 .btn:active,
 .cbi-button:hover,
 .cbi-button:focus,
 .cbi-button:active,
 .item:hover::after,
 .item:focus::after,
 .item:active::after,
 .cbi-page-actions .cbi-button-apply+.cbi-button-save:hover,
 .cbi-page-actions .cbi-button-apply+.cbi-button-save:focus,
 .cbi-page-actions .cbi-button-apply+.cbi-button-save:active {
 	text-decoration: none;
 	outline: 0;
 }

 .btn:hover,
 .btn:focus,
 .cbi-button:hover,
 .cbi-button:focus,
 .item:hover::after,
 .item:focus::after {
 	box-shadow: 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.2);
 }

 .btn:active,
 .cbi-button:active,
 .item:active::after {
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }

 .cbi-button-up:hover,
 .cbi-button-up:focus {
 	box-shadow: 0 0 2px rgba(0, 0, 0, 0.12), 0 -2px 2px rgba(0, 0, 0, 0.2);
 }

 .cbi-button-up:active {
 	box-shadow: 0 -10px 20px rgba(0, 0, 0, 0.19), 0 -6px 6px rgba(0, 0, 0, 0.23);
 }

 .btn:disabled,
 .cbi-button:disabled {
 	cursor: not-allowed;
 	pointer-events: none;
 	opacity: 0.5;
 	box-shadow: none;
 }

 .alert-message [class="btn"],
 .modal div[class="btn"],
 .cbi-button-find,
 .cbi-button-link,
 .cbi-button-up,
 .cbi-button-down,
 .cbi-button-neutral,
 .cbi-button[name="zero"],
 .cbi-button[name="restart"],
 .cbi-button[onclick="hide_empty(this)"] {
 	font-weight: 700;
 	background-color: #d4d4d4;
 }

 .btn.primary,
 .cbi-page-actions .cbi-button-save,
 .cbi-page-actions .cbi-button-apply+.cbi-button-save,
 .cbi-button-add,
 .cbi-button-save,
 .cbi-button-positive,
 .cbi-button-link,
 .cbi-button[value="Enable"],
 .cbi-button[value="Scan"],
 .cbi-button[value^="Back"],
 .cbi-button-neutral[onclick="handleConfig(event)"] {
 	font-weight: 400;
 	color: #fff;
 	background-color: rgba(0, 229, 255, 0.47);
 	border-radius: 20px;
 }

 .cbi-page-actions .cbi-button-apply,
 .cbi-section-actions .cbi-button-edit,
 .cbi-button-edit,
 .cbi-button-apply,
 .cbi-button-reload,
 .cbi-button-action,
 .cbi-button[value="Submit"],
 .cbi-button[value="Upload"],
 .cbi-button[value$="Apply"],
 .cbi-button[onclick="addKey(event)"] {
 	font-weight: 400;
 	color: #fff;
 	background-color: rgba(0, 229, 255, 0.47);
 	border-radius: 20px;
 }

 .btn.danger,
 .cbi-section-remove>.cbi-button,
 .cbi-button-remove,
 .cbi-button-reset,
 .cbi-button-negative,
 .cbi-button[value="Stop"],
 .cbi-button[value="Kill"],
 .cbi-button[onclick="reboot(this)"],
 .cbi-button-neutral[value="Restart"] {
 	font-weight: 400;
 	color: #fff;
 	background-color: rgba(255, 0, 0, 0.47);
 	border-radius: 20px;
 }

 .btn[value="Dismiss"],
 .cbi-button[value="Terminate"],
 .cbi-button[value="Reset"],
 .cbi-button[value="Disabled"],
 .cbi-button[onclick^="iface_reconnect"],
 .cbi-button[onclick="handleReset(event)"],
 .cbi-button-neutral[value="Disable"] {
 	font-weight: 400;
 	color: #fff;
 	border: thin solid #eea236;
 	background-color: #f0ad4e;
 }

 .cbi-button-success,
 .cbi-button-download,
 .cbi-button[name="backup"],
 .cbi-button[value="Download"],
 .cbi-button[value="Save mtdblock"] {
 	font-weight: 400;
 	color: #fff;
 	border: thin solid #4cae4c;
 	background-color: #5cb85c;
 }

 .a-to-btn {
 	text-decoration: none;
 }
/* ... */

